# mersenne_ifma

./: Cargo.toml  README.md
benches/: serial.rs
docs/: vector.md
src/: ifma.rs  lib.rs  serial.rs  vector.rs
src/serial/: ext_field.rs  mod.rs  prime_field.rs
src/vector/: ext_field.rs  mod.rs  prime_field.rs
