[package]
name = "mersenne_ifma"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"

[features]
ifma = []

[dependencies]
packed_simd = "0.3.1"

[dev-dependencies]
criterion = { version = "0.2", features = ["real_blackbox"] }

[[bench]]
name = "serial"
harness = false

#[[bench]]
#name = "vector"
#harness = false
#required-features = ["ifma"]

[patch.crates-io]
criterion = { git = "https://github.com/hdevalence/criterion.rs" }
